@@ -71,7 +71,7 @@ if [ -d "$GIRAPH_HOME/lib" ]; then
 	  CLASSPATH=${CLASSPATH}:$f;
 	done
 
-	for f in $GIRAPH_HOME/lib/giraph*.jar ; do
+	for f in $GIRAPH_HOME/giraph*.jar ; do
 	  if [ -e "$f" ]; then
 	    JAR=$f
 	    break
@@ -87,7 +87,7 @@ else
 	CLASSPATH2=`mvn dependency:build-classpath | grep -v "[INFO]"`
 	CLASSPATH=$CLASSPATH:$CLASSPATH2	
 
-	for f in $GIRAPH_HOME/target/giraph*.jar ; do
+	for f in `find $GIRAPH_HOME/target -name giraph\*.jar` ; do
 	  if [ -e "$f" ]; then
 	    JAR=$f
 	    break
