@@ -41,6 +41,17 @@
         <include>*.jar</include>
       </includes>
       <excludes>
+        <exclude>giraph*.jar</exclude>
+      </excludes>
+    </fileSet>
+
+    <fileSet>
+      <directory>${project.build.directory}</directory>
+      <outputDirectory>.</outputDirectory>
+      <includes>
+        <include>giraph*.jar</include>
+      </includes>
+      <excludes>
         <exclude>giraph*jar-with-dependencies.jar</exclude>
       </excludes>
     </fileSet>
