@@ -2,6 +2,9 @@ Giraph Change Log
 
 Release 0.2.0 - unreleased
 
+  GIRAPH-205: Move Giraph jar to root level of tar.gz. 
+  (Roman Shaposhnik via jghoman)
+  
   GIRAPH-206: Break out SimpleShortestPathVertex. (Eli Reisman via jghoman)
 
   GIRAPH-210: Hadoop 1.0 profile has no activation. (jghoman)
